--- a/category/templates/category/category_update.html
+++ b/category/templates/category/category_update.html
@@ -9,7 +9,7 @@
 {% block update_form %}
   <div class="px-3 pt-3">
     <div id="div_id_name" class="input-group mb-3">
-      <span class="input-group-text">Name</span>
+      <span class="input-group-text input-group-text-fw-md">Name</span>
       <input type="text"
              name="name"
              maxlength="50"
@@ -20,7 +20,7 @@
              id="id_name">
     </div>
     <div id="div_id_description" class="input-group mb-3">
-      <span class="input-group-text">Description</span>
+      <span class="input-group-text input-group-text-fw-md">Description</span>
       <textarea name="description"
                 cols="40"
                 rows="3"
