--- a/item/templates/item/item_detail_attachment_delete.html
+++ b/item/templates/item/item_detail_attachment_delete.html
@@ -1,7 +1,7 @@
 <form method="post"
       action="{% url 'item_attachment_delete' attachment.id %}">
   <div class="modal-header">
-    <h5 class="modal-title">Confirm Delete</h5>
+    <h5 class="modal-title">Confirm Deletion</h5>
     <button type="button"
             class="btn-close"
             data-bs-dismiss="modal"
