--- a/static/css/reagentree-1.0.css
+++ b/static/css/reagentree-1.0.css
@@ -1,236 +1,11 @@
 :root {
-  --rt-color-primary: #22586b;
-  --rt-color-secondary: #552122;
-  --rt-color-success: #28a745;
-  --rt-color-info: #058ba0;
-  --rt-color-warning: #ffc107;
-  --rt-color-danger: #dc3545;
-  --rt-color-light: #f8f8f8;
-  --rt-color-dark: #282d31;
-  --rt-color-gray: #1d1f20;
-
-  /* Hover Colors */
-  --rt-color-primary-hover: #1d4f61; /* Darkened primary color */
-  --rt-color-secondary-hover: #4c1e1f; /* Darkened secondary color */
-  --rt-color-success-hover: #247d3e; /* Darkened success color */
-  --rt-color-info-hover: #04788f; /* Darkened info color */
-  --rt-color-warning-hover: #e6a006; /* Darkened warning color */
-  --rt-color-danger-hover: #c2323f; /* Darkened danger color */
-  --rt-color-light-hover: #e0e0e0; /* Slightly darker light color */
-  --rt-color-dark-hover: #24292e; /* Darkened dark color */
-  --rt-color-gray-hover: #1a1c1d; /* Darkened gray color */
-
   --rt-light-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
 }
-
 a {
   text-decoration: none;
-  color: var(--rt-color-info);
 }
 a:hover {
   color: purple;
-}
-
-/* Text Colors */
-.text-primary {
-  color: var(--rt-color-primary) !important;
-}
-.text-secondary {
-  color: var(--rt-color-secondary) !important;
-}
-.text-success {
-  color: var(--rt-color-success) !important;
-}
-.text-info {
-  color: var(--rt-color-info) !important;
-}
-.text-warning {
-  color: var(--rt-color-warning) !important;
-}
-.text-danger {
-  color: var(--rt-color-danger) !important;
-}
-.text-light {
-  color: var(--rt-color-light) !important;
-}
-.text-dark {
-  color: var(--rt-color-dark) !important;
-}
-.text-gray {
-  color: var(--rt-color-gray) !important;
-}
-/* Background Colors */
-.bg-primary {
-  background-color: var(--rt-color-primary) !important;
-}
-.bg-secondary {
-  background-color: var(--rt-color-secondary) !important;
-}
-.bg-success {
-  background-color: var(--rt-color-success) !important;
-}
-.bg-info {
-  background-color: var(--rt-color-info) !important;
-}
-.bg-warning {
-  background-color: var(--rt-color-warning) !important;
-}
-.bg-danger {
-  background-color: var(--rt-color-danger) !important;
-}
-.bg-light {
-  background-color: var(--rt-color-light) !important;
-}
-.bg-dark {
-  background-color: var(--rt-color-dark) !important;
-}
-.bg-gray {
-  background-color: var(--rt-color-gray) !important;
-}
-
-/* Button Colors */
-.btn-primary {
-  background-color: var(--rt-color-primary);
-  border-color: var(--rt-color-primary);
-}
-.btn-secondary {
-  background-color: var(--rt-color-secondary);
-  border-color: var(--rt-color-secondary);
-}
-.btn-success {
-  background-color: var(--rt-color-success);
-  border-color: var(--rt-color-success);
-}
-.btn-info {
-  background-color: var(--rt-color-info);
-  border-color: var(--rt-color-info);
-}
-.btn-warning {
-  background-color: var(--rt-color-warning);
-  border-color: var(--rt-color-warning);
-}
-.btn-danger {
-  background-color: var(--rt-color-danger);
-  border-color: var(--rt-color-danger);
-}
-.btn-light {
-  background-color: var(--rt-color-light);
-  border-color: var(--rt-color-light);
-  color: #000; /* Ensuring text is visible on light background */
-}
-.btn-dark {
-  background-color: var(--rt-color-dark);
-  border-color: var(--rt-color-dark);
-}
-.btn-gray {
-  background-color: var(--rt-color-gray);
-  border-color: var(--rt-color-gray);
-}
-/* Hover and Focus States for Buttons */
-
-/* Primary Button */
-.btn-primary:hover,
-.btn-primary:focus {
-  background-color: var(--rt-color-primary-hover); /* Darkened primary color */
-  border-color: var(--rt-color-primary-hover);
-}
-
-/* Secondary Button */
-.btn-secondary:hover,
-.btn-secondary:focus {
-  background-color: var(
-    --rt-color-secondary-hover
-  ); /* Darkened secondary color */
-  border-color: var(--rt-color-secondary-hover);
-}
-
-/* Success Button */
-.btn-success:hover,
-.btn-success:focus {
-  background-color: var(--rt-color-success-hover); /* Darkened success color */
-  border-color: var(--rt-color-success-hover);
-}
-
-/* Info Button */
-.btn-info:hover,
-.btn-info:focus {
-  background-color: var(--rt-color-info-hover); /* Darkened info color */
-  border-color: var(--rt-color-info-hover);
-}
-
-/* Warning Button */
-.btn-warning:hover,
-.btn-warning:focus {
-  background-color: var(--rt-color-warning-hover); /* Darkened warning color */
-  border-color: var(--rt-color-warning-hover);
-}
-
-/* Danger Button */
-.btn-danger:hover,
-.btn-danger:focus {
-  background-color: var(--rt-color-danger-hover); /* Darkened danger color */
-  border-color: var(--rt-color-danger-hover);
-}
-
-/* Light Button */
-.btn-light:hover,
-.btn-light:focus {
-  background-color: var(
-    --rt-color-light-hover
-  ); /* Slightly darker light color */
-  border-color: var(--rt-color-light-hover);
-  color: var(--rt-color-dark); /* Ensuring text is visible */
-}
-
-/* Dark Button */
-.btn-dark:hover,
-.btn-dark:focus {
-  background-color: var(--rt-color-dark-hover); /* Darkened dark color */
-  border-color: var(--rt-color-dark-hover);
-}
-/* Gray Button */
-.btn-gray:hover,
-.btn-gray:focus {
-  background-color: var(--rt-color-gray-hover); /* Darkened gray color */
-  border-color: var(--rt-color-gray-hover);
-}
-
-/* Borders */
-
-.border-primary {
-  border-color: var(--rt-color-primary) !important;
-}
-
-.border-secondary {
-  border-color: var(--rt-color-secondary) !important;
-}
-
-.border-success {
-  border-color: var(--rt-color-success) !important;
-}
-
-.border-info {
-  border-color: var(--rt-color-info) !important;
-}
-
-.border-warning {
-  border-color: var(--rt-color-warning) !important;
-}
-
-.border-danger {
-  border-color: var(--rt-color-danger) !important;
-}
-
-.border-light {
-  border-color: var(--rt-color-light) !important;
-}
-
-.border-dark {
-  border-color: var(--rt-color-dark) !important;
-}
-
-.border-gray {
-  border-color: var(--rt-color-gray) !important;
 }
 
 .navbar-nav .nav-link .bi,
@@ -306,8 +81,8 @@ a:hover {
 
 /* Auto-dismiss alert transition */
 .alert.auto-dismiss {
-  transition: opacity 0.5s ease-out, max-height 0.5s ease-out, padding 0.5s ease-out,
-    margin 0.5s ease-out;
+  transition: opacity 0.5s ease-out, max-height 0.5s ease-out,
+    padding 0.5s ease-out, margin 0.5s ease-out;
   opacity: 1;
   max-height: 60px; /* Adjust based on your alert's typical height */
   overflow: hidden;
