--- a/category/templates/category/category_list.html
+++ b/category/templates/category/category_list.html
@@ -31,11 +31,10 @@
               <div class="row ps-2 small">
                 {% for item in category.items.all|slice:10 %}
                   <div class="col-4">
+                    <i class="bi bi-box2"></i>
                     <a href="{% url 'item_detail' item.pk %}"
                        class="pe-2"
-                       title="item details">
-                      <i class="bi bi-box2"></i> {{ item.name }}
-                    </a>
+                       title="item details">{{ item.name }}</a>
                   </div>
                 {% endfor %}
                 <div class="col-12 small">
