--- a/company/templates/company/company_list.html
+++ b/company/templates/company/company_list.html
@@ -13,13 +13,13 @@
     <table class="table">
       <thead>
         <tr>
-          <th scope="col">Company</th>
-          <th scope="col" class="d-none d-lg-table-cell">Description</th>
-          <th scope="col" class="text-center d-none d-lg-table-cell">Made</th>
-          <th scope="col" class="text-center d-none d-lg-table-cell">Supplied</th>
-          <th scope="col" class="text-center d-lg-table-cell">Phone</th>
-          <th scope="col">Website</th>
-          <th scope="col" class="d-none d-lg-table-cell">Actions</th>
+          <th width="20%">Company</th>
+          <th width="25%" class="d-none d-lg-table-cell">Description</th>
+          <th class="text-center d-none d-lg-table-cell">Made</th>
+          <th class="text-center d-none d-lg-table-cell">Supplied</th>
+          <th class="text-center d-lg-table-cell">Phone</th>
+          <th>Website</th>
+          <th width="5%" class=" d-lg-table-cell">Actions</th>
         </tr>
       </thead>
       <tbody>
@@ -29,13 +29,13 @@
               <a href="{% url 'company_detail' company.pk %}">{{ company.name }}</a>
             </td>
             <td class="d-none d-lg-table-cell">{{ company.description|truncatechars:50 }}</td>
-            <td class="text-center d-none d-lg-table-cell">{{ company.manufactured_items.count }}</td>
-            <td class="text-center d-none d-lg-table-cell">{{ company.supplied_items.count }}</td>
+            <td class="text-center d-none d-lg-table-cell">{{ company.manufactured_items.count|default:"" }}</td>
+            <td class="text-center d-none d-lg-table-cell">{{ company.supplied_items.count|default:"" }}</td>
             <td class="text-center d-lg-table-cell">{{ company.phone }}</td>
             <td>
               <a href="{{ company.website }}" title="Visit {{ company.website }}">{{ company.website }}</a>
             </td>
-            <td class="d-none d-lg-table-cell">
+            <td class="d-lg-table-cell">
               <a href="{% url 'company_update' company.pk %}"><i class="bi bi-pencil-square"></i></a>
               <a hx-get="{% url 'company_delete' company.pk %}"
                  hx-trigger="click"
