--- a/location/templates/location/location_list.html
+++ b/location/templates/location/location_list.html
@@ -32,10 +32,11 @@
               <div class="row ps-2 small">
                 {% for stock in location.stockitems.all|slice:10 %}
                   <div class="col-6">
+                    <i class="bi bi-box-seam"></i>
                     <a href="{% url 'stock_detail' stock.pk %}"
                        class="pe-2"
                        title="{{ stock.delivery.delivery_date|date:'d/m/Y' }}| {{ stock.lot_number }}| box {{ stock.ordinal_number }}">
-                      <i class="bi bi-box-seam"></i> {{ stock.item.name }}
+                      {{ stock.item.name }}
                     </a>
                   </div>
                 {% endfor %}
