--- a/location/templates/location/location_update.html
+++ b/location/templates/location/location_update.html
@@ -8,7 +8,7 @@
 {% block update_form %}
   <div class="px-3 pt-3">
     <div id="div_id_name" class="input-group mb-3">
-      <span class="input-group-text">Location Name*</span>
+      <span class="input-group-text input-group-text-fw-md">Location Name*</span>
       <input type="text"
              name="name"
              maxlength="100"
@@ -19,7 +19,7 @@
              id="id_name">
     </div>
     <div id="div_id_room" class="input-group mb-3">
-      <span class="input-group-text">Room Name</span>
+      <span class="input-group-text input-group-text-fw-md">Room Name</span>
       <input type="text"
              name="room"
              maxlength="100"
@@ -29,7 +29,7 @@
              id="id_room">
     </div>
     <div id="div_id_description" class="input-group mb-3">
-      <span class="input-group-text">Description</span>
+      <span class="input-group-text input-group-text-fw-md">Description</span>
       <textarea name="description"
                 cols="40"
                 rows="3"
