item create view template

--- a/company/templates/company/company_create.html
+++ b/company/templates/company/company_create.html
@@ -8,7 +8,7 @@
 {% block create_form %}
   <div class="px-3 pt-3">
     <div id="div_id_name" class="mb-3 input-group">
-      <span class="input-group-text input-group-text-fw-md">Name*</span>
+      <span class="input-group-text input-group-text-fw-sm">Name*</span>
       <input type="text"
              name="name"
              maxlength="100"
@@ -17,8 +17,8 @@
              autocomplete="off"
              id="id_name">
     </div>
-    <div id="div_id_name" class="mb-3 input-group">
-      <span class="input-group-text input-group-text-fw-md">Website</span>
+    <div id="div_id_website" class="mb-3 input-group">
+      <span class="input-group-text input-group-text-fw-sm">Website</span>
       <input type="url"
              name="website"
              maxlength="200"
@@ -26,8 +26,8 @@
              class="urlinput form-control"
              id="id_website">
     </div>
-    <div id="div_id_name" class="mb-3 input-group">
-      <span class="input-group-text input-group-text-fw-md">Phone</span>
+    <div id="div_id_phone" class="mb-3 input-group">
+      <span class="input-group-text input-group-text-fw-sm">Phone</span>
       <input type="text"
              name="phone"
              maxlength="20"
@@ -35,8 +35,8 @@
              class="textinput form-control"
              id="id_phone">
     </div>
-    <div id="div_id_name" class="mb-3 input-group">
-      <span class="input-group-text input-group-text-fw-md">Description</span>
+    <div id="div_id_description" class="mb-3 input-group">
+      <span class="input-group-text input-group-text-fw-sm">Description</span>
       <textarea name="description"
                 cols="40"
                 rows="3"
