--- a/company/templates/company/company_update.html
+++ b/company/templates/company/company_update.html
@@ -9,7 +9,7 @@
 {% block update_form %}
   <div class="px-3 pt-3">
     <div id="div_id_name" class="mb-3 input-group">
-      <span class="input-group-text input-group-text-fw-md">Name*</span>
+      <span class="input-group-text input-group-text-fw-sm">Name*</span>
       <input type="text"
              name="name"
              maxlength="100"
@@ -19,7 +19,7 @@
              id="id_name">
     </div>
     <div id="div_id_name" class="mb-3 input-group">
-      <span class="input-group-text input-group-text-fw-md">Website</span>
+      <span class="input-group-text input-group-text-fw-sm">Website</span>
       <input type="url"
              name="website"
              maxlength="200"
@@ -28,7 +28,7 @@
              id="id_website">
     </div>
     <div id="div_id_name" class="mb-3 input-group">
-      <span class="input-group-text input-group-text-fw-md">Phone</span>
+      <span class="input-group-text input-group-text-fw-sm">Phone</span>
       <input type="text"
              name="phone"
              maxlength="20"
@@ -37,7 +37,7 @@
              id="id_phone">
     </div>
     <div id="div_id_name" class="mb-3 input-group">
-      <span class="input-group-text input-group-text-fw-md">Description</span>
+      <span class="input-group-text input-group-text-fw-sm">Description</span>
       <textarea name="description"
                 cols="40"
                 rows="3"
