--- a/item/templates/item/stockitem_create.html
+++ b/item/templates/item/stockitem_create.html
@@ -28,7 +28,7 @@
     </div>
     {{ form.item.errors }}
     <div id="itemSearchResults" class="list-group type-search-result"></div>
-    <input type="text" name="item" id="id_item" value="0" hidden>
+    <input type="text" name="item" id="id_item" hidden>
   </div>
   <div class="input-group mb-3">
     <span class="input-group-text input-group-text-fw-sm">Lot Number</span>
