--- a/category/templates/category/category_create.html
+++ b/category/templates/category/category_create.html
@@ -8,7 +8,7 @@
 {% block create_form %}
   <div class="px-3 pt-3">
     <div id="div_id_name" class="input-group mb-3">
-      <span class="input-group-text input-group-text-fw-md">Name*</span>
+      <span class="input-group-text input-group-text-fw-sm">Name*</span>
       <input type="text"
              name="name"
              maxlength="50"
@@ -18,7 +18,7 @@
              id="id_name">
     </div>
     <div id="div_id_description" class="input-group mb-3">
-      <span class="input-group-text input-group-text-fw-md">Description</span>
+      <span class="input-group-text input-group-text-fw-sm">Description</span>
       <textarea name="description" cols="40" rows="3" class="textarea form-control" id="id_description">
 </textarea>
     </div>
