--- a/templates/base.html
+++ b/templates/base.html
@@ -77,7 +77,9 @@
             {% endfor %}
           {% endif %}
         </div>
-        <div class="pt-2"><!--page top blank space control--></div>
+        <div class="pt-2">
+          <!--page top blank space control-->
+        </div>
       {% endblock alerts %}
       <!-- Main content goes here -->
       {% block content %}
