--- a/user/templates/user/profile_view.html
+++ b/user/templates/user/profile_view.html
@@ -1,22 +1,20 @@
 {% extends "user/profile.html" %}
 {% block profile_form %}
-  <form>
-    <div class="mb-3">
-      <label for="firstName" class="form-label">First name</label>
-      <input type="text"
-             class="form-control"
-             id="firstName"
-             value="{{ user.first_name }}"
-             readonly>
-    </div>
-    <div class="mb-3">
-      <label for="lastName" class="form-label">Last name</label>
-      <input type="text"
-             class="form-control"
-             id="lastName"
-             value="{{ user.last_name }}"
-             readonly>
-    </div>
-    <a href="{% url 'user_edit' %}" class="btn btn-primary"><i class="bi bi-pencil-square"></i> Edit Profile</a>
-  </form>
+  <div class="mb-3 input-group">
+    <span class="input-group-text">First Name:</span>
+    <input type="text"
+           class="form-control"
+           id="firstName"
+           value="{{ user.first_name }}"
+           readonly>
+  </div>
+  <div class="mb-3 input-group">
+    <span class="input-group-text">Last Name:</span>
+    <input type="text"
+           class="form-control"
+           id="lastName"
+           value="{{ user.last_name }}"
+           readonly>
+  </div>
+  <a href="{% url 'user_edit' %}" class="btn btn-primary"><i class="bi bi-pencil-square"></i> Edit</a>
 {% endblock profile_form %}
