--- a/user/templates/user/profile_edit.html
+++ b/user/templates/user/profile_edit.html
@@ -1,25 +1,35 @@
-{% extends "user/profile.html" %}
-{% block profile_form %}
-  <form method="post">
-    {% csrf_token %}
-    <div class="mb-3">
-      <label for="firstName" class="form-label">First name</label>
-      <input type="text"
-             name="first_name"
-             class="form-control"
-             id="firstName"
-             value="{{ user.first_name }}">
-    </div>
-    <div class="mb-3">
-      <label for="lastName" class="form-label">Last name</label>
-      <input type="text"
-             name="last_name"
-             class="form-control"
-             id="lastName"
-             value="{{ user.last_name }}">
-    </div>
-    <button type="submit" class="btn btn-success">
-      <i class="bi bi-floppy"></i> Save
-    </button>
-  </form>
-{% endblock profile_form %}
+{% extends "user/profile_base.html" %}
+{% block title %}
+  User Profile
+{% endblock title %}
+{% block panel_title %}
+  User Profile - Edit
+{% endblock panel_title %}
+{% block panel_content %}
+  <div class="pt-3 px-3">
+    <form method="post">
+      {% csrf_token %}
+      <div class="input-group mb-3">
+        <span class="input-group-text input-group-text-sm">First Name:</span>
+        <input type="text"
+               name="first_name"
+               class="form-control"
+               id="firstName"
+               value="{{ user.first_name }}">
+      </div>
+      <div class="input-group mb-3">
+        <span class="input-group-text input-group-text-sm">Last Name:</span>
+        <input type="text"
+               name="last_name"
+               class="form-control"
+               id="lastName"
+               value="{{ user.last_name }}">
+      </div>
+      <div class="text-end">
+        <button type="submit" class="btn btn-sm btn-success">
+          <i class="bi bi-floppy"></i> Save
+        </button>
+      </div>
+    </form>
+  </div>
+{% endblock panel_content %}
